# GKiKzK

./: CMakeLists.txt  README.md  TinyOgre.cpp  TinyOgre.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp  plugins.cfg  resources.cfg  suzanne.cpp  suzanne.hpp
Suzanne/: Suzanne.material  Suzanne.mesh  Suzanne.mesh.xml
prezentacja/: GKiKzK.ppt
