CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH "/usr/lib/OGRE/cmake")

PROJECT(Ogre3D-GKIKK)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")

FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OIS REQUIRED)

INCLUDE_DIRECTORIES(
  ${OGRE_INCLUDE_DIR}
  ${OIS_INCLUDE_DIR}
  )

LINK_DIRECTORIES(
  ${OGRE_LIBRARY_DIR}
  ${OIS_INCLUDE_DIR}
  )

SET(LIBS OgreMain boost_system ${OIS_LIBRARIES})

SET(HEADERS TinyOgre.hpp inputmanager.hpp suzanne.hpp)
SET(SOURCES TinyOgre.cpp inputmanager.cpp suzanne.cpp main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}
        ${HEADERS}
        ${SOURCES}
        )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS} )
